# ComfyUI-Video-Frame-Extractor

./: README.md  custom-node-list.json  node_list.json  pyproject.toml  requirements.txt  video_frame_extractor.py
examples/: README.md
web/js/: video_frame_extractor.js
